--- a/modulework/login/src/main/res/layout/activity_login.xml
+++ b/modulework/login/src/main/res/layout/activity_login.xml
@@ -1,18 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".LoginActivity">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="loginActivity"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <variable
+            name="vm"
+            type="com.jx.modulework.login.LoginViewModel" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="100dp">
+
+        <EditText
+            android:id="@+id/et_username"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:background="#eee"
+            android:text="@={vm.userName}"
+            android:textSize="20dp"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/et_pwd"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:background="#eee"
+            android:text="@={vm.password}"
+            android:textSize="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/et_username" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:onClick="@{()->vm.login()}"
+            android:text="login"
+            app:layout_constraintTop_toBottomOf="@+id/et_pwd" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
